crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__generates_ast_enum_using_parser_nodes.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub enum SimpleAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    Add(
        ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
        ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
    ),
    Return(::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>),
}
