crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__generates_ast_for_custom_parsed_types.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub struct ConstAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    value: <u64 as ::kirin_chumsky_2::WithChumskyParser<'tokens, 'src>>::Output,
}
