crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__generates_ast_for_named_struct.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub struct ComplexAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    first: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
    maybe_block: Option<::kirin_chumsky_2::Block<'tokens, 'src, Language>>,
}
