crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__generates_ast_for_tuple_variants.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub enum FlowAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    Wrap(::kirin_chumsky_2::Region<'tokens, 'src, Language>),
    Branch(
        ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
        ::kirin_chumsky_2::Successor<'tokens, 'src, Language>,
    ),
    Done,
}
