crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__generates_ast_with_named_and_typed_value.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub struct SinAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    field_0_name: ::kirin_chumsky_2::NameofSSAValue<'tokens, 'src, Language>,
    field_0_type: ::kirin_chumsky_2::TypeofSSAValue<'tokens, 'src, Language>,
}
