crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__generates_ast_with_result_type_and_ssa_defaults.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub struct AddAST<
    'tokens,
    'src: 'tokens,
    Language: ::kirin_chumsky_2::LanguageChumskyParser<'tokens, 'src>,
> {
    lhs: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
    rhs: ::kirin_chumsky_2::SSAValue<'tokens, 'src, Language>,
    result_type: ::kirin_chumsky_2::TypeofSSAValue<'tokens, 'src, Language>,
}
