crates/kirin-chumsky-format-old/src/ast/snapshots/kirin_chumsky_format__ast__tests__respects_custom_crate_path.snap
---
source: crates/kirin-chumsky-format/src/ast/tests.rs
assertion_line: 133
expression: formatted
---
#[allow(non_camel_case_types)]
#[derive(Clone, Debug, PartialEq)]
pub struct IdAST<
    'tokens,
    'src: 'tokens,
    Language: custom_chumsky::parser::LanguageChumskyParser<'tokens, 'src>,
>(custom_chumsky::parser::SSAValue);
